--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-* {
-  box-sizing: border-box;
+/* pure page m lga dega (*) universal selector  */
+* { 
+  box-sizing: border-box; 
+  /* margin kbhi bhi box ka part nhi hota agr m 10 px padding aur 10px border de du toh total content likne ke liye mere pass bachta h 260 , so aisa na ho isliye border box lagate h ab agr aap kisi ko bhi padding and border doge toh wo jo original box hoga uske chedega nhi aur uske bhaar padding and border lga dega  */
 }
 
 body {
@@ -11,9 +13,11 @@ body {
   height: 5rem;
   background-color: #4b4b4b;
   display: flex;
+  /* hme iss container ke ander sb inline chahiye toh we use display flex */
   align-items: center;
 }
 
+/* tool box container ke ander jitne bhi uske children honge un sbko 4 rem ka margin mil jaaye  */
 .toolbox-cont > * {
   margin-left: 4rem;
 }
@@ -27,24 +31,7 @@ body {
   justify-content: space-evenly;
 }
 
-
-.action-btn-cont{
-       height:3.5rem ;
-       width:8rem ;
-       background-color: #3d3d3d;
-       display:flex
-}
-
-.action-btn-cont>*{
-       display: flex;
-       justify-content: center;
-       width: 50%;
-       font-size: 2rem;
-       align-items: center;
-       color: white;
-
-}
-
+/* sb small boxes like pink , green , blue etc  */
 .color {
   height: 1.5rem;
   width: 3rem;
@@ -65,6 +52,24 @@ body {
 .black {
   background-color: black;
 }
+
+.action-btn-cont{
+  height:3.5rem ;
+  width:8rem ;
+  background-color: #3d3d3d;
+  display:flex
+}
+
+.action-btn-cont>*{
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  font-size: 2rem;
+  align-items: center;
+  color: white;
+
+}
+
 
 
 .modal-cont{
