--- a/style.css
+++ b/style.css
@@ -91,8 +91,11 @@ body {
   background-color: #dfe4ea;
   outline: none;
   border: none;
+  /* text area ko resize nhi kr paaye  */
   resize : none;
+  /* likhe ka fontsize thoda bda ho  */
   font-size: 2rem;
+  /* padding means thodi ander se chaalu ho  */
   padding: 2rem;
 }
 
